--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "t2a27-render-node",
   "version": "1.0.0",
-  "description": "Simple Express server for T2A27",
+  "description": "Simple Express server for t2a27",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
